--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	    <link rel= "stylesheet" href = "css/bootstrap.min.css">
+    	<link rel = "stylesheet" href = "css/bootstrap-theme.min.css">
+	</head>
   <body>
     <div id = "content"></div>
+    <script src = "js/jquery-1.12.0.min.js"></script>
+    <script src = "js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
