--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -5,7 +5,8 @@
     	<link rel = "stylesheet" href = "css/bootstrap-theme.min.css">
 	</head>
   <body>
-    <div id = "content"></div>
+    <div id = "nav-bar-div"></div>
+		<div id = "content"></div>
     <script src = "js/jquery-1.12.0.min.js"></script>
     <script src = "js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
