--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+			<title>Locals Love It</title>
 	    <link rel= "stylesheet" href = "css/bootstrap.min.css">
     	<link rel = "stylesheet" href = "css/bootstrap-theme.min.css">
 	</head>
   <body>
-    <div id = "nav-bar-div"></div>
 		<div id = "content"></div>
     <script src = "js/jquery-1.12.0.min.js"></script>
     <script src = "js/bootstrap.min.js"></script>
